# Mygale

./: .gitignore  CMakeLists.txt
resources/: resources.qrc
resources/icon/: mygale.rc
resources/ui/: AppSettingsWidget.ui  JobCreationWidget.ui  MainWindow.ui
src/: deploy.bat  main.cpp
src/App/: AppController.cpp  AppController.h++  MainWindow.cpp  MainWindow.h++
src/AppSettings/: AppSettings.cpp  AppSettings.h++  AppSettingsWidget.cpp  AppSettingsWidget.h++
src/JobCreation/: Job.cpp  Job.h++  JobCreation.cpp  JobCreation.h++  JobCreationWidget.cpp  JobCreationWidget.h++
src/Script/: BaseScript.cpp  BaseScript.h++
src/exception/: CustomErrors.h++
